@@ -31,6 +31,10 @@ Here is a history of user visible changes to Mailman.
       in the To: or Cc: header differed in case from the case-preserved member
       address.  Bug #297795.
 
+    - Fixed a problem in SecurityManager that caused it to not find the
+      cookie when CheckCookie was not given a user and the user in the cookie
+      had a %xx encoded character.  Bug # 299220.
+
 2.1.11 (30-Jun-2008)
 
   New Features
